<?xml version="1.0" encoding="utf-8" standalone="no"?>
<!-- AUTO-GENERATED from en.yaml. DO NOT EDIT THIS FILE DIRECTLY! --><resources>
    <string name="language_code">en</string>
    <string name="language_name">English</string>
    <string name="app_name">Carburoid</string>
    <string name="menu_back">Back</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_chart">Chart</string>
    <string name="settings_category_language_appearance">Language and appearance</string>
    <string name="settings_language_title">Language</string>
    <string name="settings_language_summary">Change the app language</string>
    <string name="language_system_default">System default</string>
    <string name="settings_translate_title">Help translate your language</string>
    <string name="settings_translate_summary">Go to Weblate</string>
    <string name="settings_theme">Theme</string>
    <string name="theme_light">Light</string>
    <string name="theme_dark">Dark</string>
    <string name="theme_system">Auto (System Default)</string>
    <string name="settings_category_station_filters">Station filters</string>
    <string name="settings_filter_expensive">Hide irrelevant stations</string>
    <string name="settings_filter_expensive_summary">A station is considered irrelevant if any other exists that is nearer and cheaper. (Recommended)</string>
    <string name="settings_filter_expensive_warning">Carburoid is designed to work with this filter enabled. Disabling it shows many more stations, which significantly slows down the application. Consider re-enabling it later.</string>
    <string name="settings_filter_non_public">Show only public prices</string>
    <string name="settings_filter_non_public_summary">Hide prices requiring membership or anything else.</string>
    <string name="settings_filter_beyond_sea">Hide stations beyond the sea</string>
    <string name="settings_filter_beyond_sea_summary">Show only those in your zone (Peninsula, Balearic Islands, Canary Islands, or Ceuta and Melilla)</string>
    <string name="settings_filter_closed">Show closed stations</string>
    <string name="settings_filter_closed_summary">Set a time margin for stations that will open soon</string>
    <string name="settings_filter_closed_tolerance_none">No margin, always filter</string>
    <string name="settings_filter_closed_tolerance_half_hour">Half an hour</string>
    <string name="settings_filter_closed_tolerance_one_hour">One hour</string>
    <string name="settings_filter_closed_tolerance_two_hours">Two hours</string>
    <string name="settings_filter_closed_tolerance_twelve_hours">Half a day</string>
    <string name="settings_filter_closed_tolerance_one_day">A day</string>
    <string name="settings_filter_closed_tolerance_never">Show always</string>
    <string name="no_gas_stations">No matching gas station</string>
    <string name="product_selector_hint">Product</string>
    <string name="product_selector_icon_description">Product selector</string>
    <string name="product_category_recent">Recent</string>
    <string name="product_category_diesel">Diesel</string>
    <string name="product_category_gasoline">Gasoline</string>
    <string name="product_category_gaseous">Gaseous</string>
    <string name="product_category_additives">Additives</string>
    <string name="product_name_gasoleo_a">Road Diesel (A)</string>
    <string name="product_name_gasoleo_premium">Premium Diesel (A+)</string>
    <string name="product_name_gasoleo_b">Off-road Diesel (B)</string>
    <string name="product_name_diesel_renovable">Renewable Diesel</string>
    <string name="product_name_gasolina_95_e10">Gasoline 95 E10</string>
    <string name="product_name_gasolina_95_e25">Gasoline 95 E25</string>
    <string name="product_name_gasolina_95_e5">Gasoline 95 E5</string>
    <string name="product_name_gasolina_95_e5_premium">Gasoline 95 E5 Premium</string>
    <string name="product_name_gasolina_95_e85">Gasoline 95 E85</string>
    <string name="product_name_gasolina_98_e10">Gasoline 98 E10</string>
    <string name="product_name_gasolina_98_e5">Gasoline 98 E5</string>
    <string name="product_name_gasolina_renovable">Renewable Gasoline</string>
    <string name="product_name_gas_natural_comprimido">Compressed Natural Gas</string>
    <string name="product_name_gas_natural_licuado">Liquefied Natural Gas</string>
    <string name="product_name_biogas_natural_comprimido">Compressed Biogas</string>
    <string name="product_name_biogas_natural_licuado">Liquefied Biogas</string>
    <string name="product_name_biodiesel">Biodiesel</string>
    <string name="product_name_bioetanol">Bioethanol</string>
    <string name="product_name_gases_licuados_del_petroleo">Liquefied Petroleum Gas</string>
    <string name="product_name_hidrogeno">Hydrogen</string>
    <string name="product_name_amoniaco">Ammonia</string>
    <string name="product_name_metanol">Methanol</string>
    <string name="product_name_adblue">AdBlue</string>
    <string name="location_selector_hint">Location</string>
    <string name="location_selector_locate_device">Locate device</string>
    <string name="price_not_public">✱ Conditional price</string>
    <string name="detail_location">Location</string>
    <string name="detail_opening_hours">Hours</string>
    <string name="detail_other_products">Other Products</string>
    <string name="station_no_name">Unnamed</string>
    <string name="station_no_address">No address</string>
    <string name="station_no_city">No city</string>
    <string name="station_no_price">N/A</string>
    <string name="station_no_distance">\?? km</string>
    <string name="station_status_unknown">Closed\?\?</string>
    <string name="station_status_permanently_closed">Permanently closed</string>
    <string name="station_status_closed">Closed</string>
    <string name="station_status_opens_at">Opens %1$s</string>
    <string name="station_status_closes_at">Closes %1$s</string>
    <string name="station_status_open">Open</string>
    <string name="station_status_247">24/7</string>
    <string name="location_not_available">No location data detected</string>
    <string name="location_error">Error detecting location</string>
    <string name="location_forbidden">Location access denied</string>
    <string name="location_deactivated">Location is disabled</string>
    <string name="location_activate">Enable</string>
    <string name="location_permisions_concede">Allow</string>
    <string name="refreshing_data">Refreshing data…</string>
    <string name="failed_download">Download failed: %1$s</string>
    <string name="open_in_maps">Open in a map</string>
    <string name="location_picker_title">Select location</string>
    <string name="location_picker_search_icon_description">Search</string>
    <string name="location_picker_search_location_hint">Search city or address</string>
    <string name="location_picker_searching">Searching…</string>
    <string name="location_picker_no_results">No locations found</string>
    <string name="loading_new_data">Downloading new data…</string>
    <string name="dialog_accept">Accept</string>
    <string name="settings_country_title">Data provider</string>
    <string name="settings_country_summary">Select the provider of fuel price data</string>
    <string name="settings_country_es">Spain</string>
    <string name="settings_country_fr">France</string>
    <string name="settings_country_fr_warning_wip">French gas station data is still work in progress. Station names and operating hours are not yet available.</string>
    <string name="settings_warning_dialog_wip">Work in progress</string>
    <string name="warning_dialog_title">Warning</string>
    <string name="button_closer">Closer</string>
    <string name="button_cheaper">Cheaper</string>
</resources>
