<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:android="http://schemas.android.com/apk/res/android">
    <net.canvoki.carburoid.ComposePreference
        android:key="compose_preferences"
        android:title="" />

    <!-- Group: Station Filtering -->
    <PreferenceCategory
        android:title="@string/settings_category_station_filters"
        android:icon="@drawable/ic_filter_alt"
        android:key="category_filtering">

        <SwitchPreferenceCompat
            app:key="hide_expensive_further"
            app:title="@string/settings_filter_expensive"
            app:summary="@string/settings_filter_expensive_summary"
            app:defaultValue="true" />

        <SwitchPreferenceCompat
            app:key="only_public_prices"
            app:title="@string/settings_filter_non_public"
            app:summary="@string/settings_filter_non_public_summary"
            app:defaultValue="true" />

        <SwitchPreferenceCompat
            app:key="hide_beyond_sea"
            app:title="@string/settings_filter_beyond_sea"
            app:summary="@string/settings_filter_beyond_sea_summary"
            app:defaultValue="true" />

        <ListPreference
            android:key="hide_closed_margin_minutes"
            android:title="@string/settings_filter_closed"
            android:summary="@string/settings_filter_closed_summary"
            android:defaultValue="30"
            android:entries="@array/settings_filter_closed_labels"
            android:entryValues="@array/settings_filter_closed_values" />

    </PreferenceCategory>

</PreferenceScreen>
